<resources>
    <string name="app_name">loginAppAS</string>
    <string name="header">Rejestruj konto</string>
    <string name="email_placeholder">Podaj e-mail:</string>
    <string name="password_placeholder">Podaj hasło:</string>
    <string name="confirm_password_placeholder">Powtórz hasło:</string>
    <string name="email_hint">Pole do podania e-mail</string>
    <string name="password_hint">Pole do podania hasła</string>
    <string name="confirm_password_hint">Pole do powtórzenia hasła</string>
    <string name="submit_button">Zatwierdź</string>
    <string name="invalid_email">Nieprawidłowy adres e-mail</string>
    <string name="weak_passowrd">Hasło jest zbyt słabe</string>
    <string name="passwords_doesnt_match">Hasła się różnią</string>

    <string name="welcome_auth">Witamy w aplikacji</string>
    <string name="logged_as">Zalogowano jako %1$s</string>
    <string name="log_out">Wyloguj</string>
</resources>